--- a/package.json
+++ b/package.json
@@ -23,10 +23,21 @@
   "dependencies": {
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/graphql": "^7.9.4",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/typeorm": "^7.1.5",
+    "@types/mongodb": "^3.6.3",
+    "apollo-server-express": "^2.19.1",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.13.0",
+    "graphql": "^15.4.0",
+    "graphql-tools": "^7.0.2",
+    "mongodb": "^3.6.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "typeorm": "^0.2.30",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
