--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/bcrypt": "^3.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/mongodb": "^3.6.3",
     "apollo-server-express": "^2.19.1",
     "bcryptjs": "^2.4.3",
