--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
+    "@nestjs/config": "^0.6.2",
     "@nestjs/core": "^7.5.1",
-    "@nestjs/graphql": "^7.9.4",
+    "@nestjs/graphql": "^7.9.8",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/mongoose": "^7.2.2",
     "@nestjs/passport": "^7.1.5",
@@ -32,15 +33,15 @@
     "@types/bcrypt": "^3.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/mongodb": "^3.6.3",
-    "apollo-server-express": "^2.19.1",
+    "apollo-server-express": "^2.19.2",
     "bcryptjs": "^2.4.3",
-    "class-transformer": "^0.3.1",
-    "class-validator": "^0.13.0",
+    "class-transformer": "^0.3.2",
+    "class-validator": "^0.13.1",
     "config": "^3.3.3",
     "graphql": "^15.4.0",
     "graphql-tools": "^7.0.2",
     "mongodb": "^3.6.3",
-    "mongoose": "^5.11.12",
+    "mongoose": "^5.11.13",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -52,22 +53,22 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
-    "@nestjs/schematics": "^7.1.3",
+    "@nestjs/schematics": "^7.2.7",
     "@nestjs/testing": "^7.5.1",
-    "@types/express": "^4.17.8",
+    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.6",
+    "@types/node": "^14.14.22",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "eslint": "^7.12.1",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "eslint": "^7.18.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
-    "supertest": "^6.0.0",
+    "supertest": "^6.1.1",
     "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.8",
     "ts-node": "^9.0.0",
